@@ -8,6 +8,9 @@
 # 	autoconf (optional - used by munin-config)
 #
 # $Log$
+# Revision 1.5  2004/12/09 20:27:45  jimmyo
+# Sort fields in df*-plugins alphabetically.
+#
 # Revision 1.4  2004/09/25 22:29:16  jimmyo
 # Added info fields to a bunch of plugins.
 #
@@ -48,7 +51,7 @@ if [ "$1" = "config" ]; then
 	echo 'graph_vlabel %'
 	echo 'graph_category disk'
 	echo 'graph_info This graph shows disk usage on the machine.'
-	df -T -P -l -x none | sed 1d | grep -v "//" | while read i; do
+	df -T -P -l -x none | sed 1d | grep -v "//" | sort | while read i; do
 		name=`echo $i | sed 's/[\/.-]/_/g'| awk '{ print $1 }'`
 		echo -n "$name.label "
 		echo $i | awk "{ 
