@@ -8,6 +8,9 @@
 # 	autoconf (optional - used by munin-config)
 #
 # $Log$
+# Revision 1.5  2004/12/09 20:27:45  jimmyo
+# Sort fields in df*-plugins alphabetically.
+#
 # Revision 1.4  2004/05/18 22:04:29  jimmyo
 # Use "sed 1d" instead of "tail +2" in df plugins (patch by Olivier Delhomme).
 #
@@ -71,7 +74,7 @@ if [ "$1" = "config" ]; then
 	echo 'graph_title Inode usage (in %)'
 	echo 'graph_args --upper-limit 100 -l 0'
 	echo 'graph_vlabel %'
-	df -P -l -i  | sed 1d | grep -v "//" | while read i; do
+	df -P -l -i  | sed 1d | grep -v "//" | sort | while read i; do
 		if [ "`fs $i`" = "reiserfs" ] ; then continue ; fi
 		name=`echo $i | sed 's/[\/.]/_/g'| awk '{ print $1 }'`
 		printf "$name.label "
